--- a/styles/style.css
+++ b/styles/style.css
@@ -182,36 +182,6 @@ h1 {
 	-moz-border-radius: 4px;
 	border-radius: 4px;
 	margin: 0 auto;
-
-	/*box-shadow: rgb(26, 31, 52) 1px 1px,
-    rgb(26, 31, 52) 2px 2px,
-    rgb(26, 31, 52) 3px 3px,
-    rgb(26, 31, 53) 4px 4px,
-    rgb(26, 32, 53) 5px 5px,
-    rgb(27, 32, 53) 6px 6px,
-    rgb(27, 32, 54) 7px 7px,
-    rgb(27, 32, 54) 8px 8px,
-    rgb(27, 32, 54) 9px 9px,
-    rgb(27, 33, 55) 10px 10px,
-    rgb(27, 33, 55) 11px 11px,
-    rgb(28, 33, 55) 12px 12px,
-    rgb(28, 33, 56) 13px 13px,
-    rgb(28, 34, 56) 14px 14px,
-    rgb(28, 34, 56) 15px 15px,
-    rgb(28, 34, 57) 16px 16px,
-    rgb(29, 34, 57) 17px 17px,
-    rgb(29, 34, 57) 18px 18px,
-    rgb(29, 35, 58) 19px 19px,
-    rgb(29, 35, 58) 20px 20px,
-    rgb(29, 35, 58) 21px 21px,
-    rgb(29, 35, 59) 22px 22px,
-    rgb(30, 35, 59) 23px 23px,
-    rgb(30, 36, 59) 24px 24px,
-    rgb(30, 36, 60) 25px 25px,
-    rgb(30, 36, 60) 26px 26px,
-    rgb(30, 36, 60) 27px 27px,
-    rgb(31, 37, 61) 28px 28px;*/
-
 }
 
 h2 {
@@ -302,11 +272,10 @@ input:focus {
    color: #95a5a6; 
 }
 
-ul.guessBox {
-	height: 80px;
+.guessBox {
+	min-height: 80px;
 	margin: 10px auto 0;
-	/*background: #11a8ab;*/
-	background: #109FBF;
+	background: #8392C6;
 	padding: 0.5em;
 	display: block;
 	line-height: 2em;
@@ -315,32 +284,31 @@ ul.guessBox {
 	color: #fff;
 	overflow: auto;
 }
-ul.guessBox li {
-	display: inline;
+.guessBox li {
+	display: inline-block;
 	background-color: #02386A;
 	padding: 0.3em;
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
 	border-radius: 4px;
-	width: 95%;
 	margin: 0.2em;
 	color: #fff;
 }
 
 .very-hot {
-	background-color: #B40404;
+	background-color: #B40404 !important;
 }
 .hot {
-	background-color: #DF3A01;
+	background-color: #DF3A01 !important;
 }
 .lukewarm {
-	background-color: #109FBF;
+	background-color: #109FBF !important;
 }
 .cold {
-	background-color: #045FB4;
+	background-color: #045FB4 !important;
 }
 .very-cold {
-	background-color: #02386A;
+	background-color: #02386A !important;
 }
 
 #newGameButton {
